--- a/example/android/app/src/main/res/values/strings.xml
+++ b/example/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
+    <!--    default icon name -->
     <string name="small_icon">ic_notification</string>
+    <!--    default_notification_channel_id-->
+    <string name="default_notification_channel_id">CHAT_MESSAGES</string>
 </resources>
